Implement the main functionality for the app

--- a/mini_community_feed_app/android/app/src/main/AndroidManifest.xml
+++ b/mini_community_feed_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="mini_community_feed_app"
+        android:label="Mini Community"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
