--- a/mini_community_feed_app/pubspec.yaml
+++ b/mini_community_feed_app/pubspec.yaml
@@ -1,8 +1,8 @@
 name: mini_community_feed_app
-description: "A new Flutter project."
+description: "A simple yet elegant Flutter application that displays a community-style photo feed fetched from a public API."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,7 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  equatable:
+  dartz:
+  bloc:
+  flutter_bloc:
+  http:
+  connectivity_plus:
+  get_it:
+  cached_network_image:
+  shimmer:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -51,16 +59,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
